Add options to task category and status dropdowns

--- a/index.html
+++ b/index.html
@@ -131,12 +131,18 @@
                         <label for="">Danh mục *</label>
                         <select name="" id="">
                             <option value="" disabled selected>Chọn danh mục</option>
+                            <option value="">Công việc</option>
+                            <option value="">Cá nhân</option>
+                            <option value="">Khẩn cấp</option>
+                            <option value="">Khác</option>
                         </select>
                     </div>
                     <div class="form_task_content_input">
                         <label for="">Trạng thái</label>
                         <select name="" id="">
-                            <option value="" disabled selected>To do</option>
+                            <option value="" selected>To do</option>
+                            <option value="">In Progress</option>
+                            <option value="">Done</option>
                         </select>
                     </div>
                 </div>
