Update task category dropdown options

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                     <button id="add_task" class="btn" onclick="openDialogTask()">Thêm Task</button>
                     <input class="input" type="text" name="" id="" placeholder="Tìm kiếm task ..." />
                     <select class="input" name="" id="">
-                        <option value="Tất cả danh mục" disabled selected>Tất cả danh mục</option>
+                        <option value="" disabled selected>Chọn danh mục</option>
+                        <option value="">Công việc</option>
+                        <option value="">Cá nhân</option>
+                        <option value="">Khẩn cấp</option>
+                        <option value="">Khác</option>
                     </select>
                     <button id="theme-toggle" class="btn">Chuyển Dark Mode</button>
                 </div>
