--- a/index.html
+++ b/index.html
@@ -12,147 +12,80 @@
                 <h2>Mini Kanban Board</h2>
                 <div>
                     <button id="add_task" class="btn" onclick="openDialogTask()">Thêm Task</button>
-                    <input class="input" type="text" name="" id="" placeholder="Tìm kiếm task ..." />
-                    <select class="input" name="" id="">
-                        <option value="" disabled selected>Chọn danh mục</option>
-                        <option value="">Công việc</option>
-                        <option value="">Cá nhân</option>
-                        <option value="">Khẩn cấp</option>
-                        <option value="">Khác</option>
+                    <input class="input" type="text" name="" id="search_task" placeholder="Tìm kiếm task ..." />
+                    <select class="input" name="" id="search_category">
+                        <option value="none" selected>Chọn danh mục</option>
+                        <option value="work">Công việc</option>
+                        <option value="personal">Cá nhân</option>
+                        <option value="urgent">Khẩn cấp</option>
+                        <option value="other">Khác</option>
                     </select>
                     <button id="theme-toggle" class="btn">Chuyển Dark Mode</button>
                 </div>
             </header>
             <main>
-                <div class="card">
+                <div class="card" data-status="todo">
                     <div class="card__header">
                         <h3 class="card__header_title">To Do</h3>
-                        <span>2</span>
+                        <span id="todo_count">2</span>
                     </div>
-                    <div class="card__content">
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="card__content" id="todo_task"></div>
                 </div>
-                <div class="card">
+                <div class="card" data-status="inprogress">
                     <div class="card__header">
                         <h3 class="card__header_title">In Progress</h3>
-                        <span>2</span>
+                        <span id="in_progress_count">2</span>
                     </div>
-                    <div class="card__content">
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="card__content" id="in_progress_task"></div>
                 </div>
-                <div class="card">
+                <div class="card" data-status="done">
                     <div class="card__header">
                         <h3 class="card__header_title">Done</h3>
-                        <span>2</span>
+                        <span id="done_count">2</span>
                     </div>
-                    <div class="card__content">
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card__content_item">
-                            <h4 class="card__content_item_title">Task 1</h4>
-                            <p class="card__content_item_description">Description</p>
-                            <div class="card__content_item_action">
-                                <div class="active">Công việc</div>
-                                <div>
-                                    <button class="edit">Edit</button>
-                                    <button class="delete">Delete</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="card__content" id="done_task"></div>
                 </div>
             </main>
         </div>
         <dialog id="task_dialog">
             <form class="form_task">
                 <div class="form_task_title">
-                    <h4>Chỉnh sửa task</h4>
+                    <h4 id="form_task_title_title">Thêm task</h4>
                     <span onclick="closeDialogTask()">&times;</span>
                 </div>
                 <div class="form_task_content">
                     <div class="form_task_content_input">
                         <label for="">Tiêu đề *</label>
-                        <input type="text" placeholder="Nhập tiêu đề task ..." />
+                        <input type="text" id="title" type="text" placeholder="Nhập tiêu đề task ..." />
+                        <span id="title_error"></span>
                     </div>
                     <div class="form_task_content_input">
                         <label for="">Mô tả</label>
-                        <textarea name="" id="" placeholder="Nhập mô tả chi tiết"></textarea>
+                        <textarea name="" id="description" placeholder="Nhập mô tả chi tiết"></textarea>
                     </div>
                     <div class="form_task_content_input">
                         <label for="">Danh mục *</label>
-                        <select name="" id="">
+                        <select id="category" name="" id="">
                             <option value="" disabled selected>Chọn danh mục</option>
-                            <option value="">Công việc</option>
-                            <option value="">Cá nhân</option>
-                            <option value="">Khẩn cấp</option>
-                            <option value="">Khác</option>
+                            <option value="work">Công việc</option>
+                            <option value="personal">Cá nhân</option>
+                            <option value="urgent">Khẩn cấp</option>
+                            <option value="other">Khác</option>
                         </select>
+                        <span id="category_error"></span>
                     </div>
                     <div class="form_task_content_input">
                         <label for="">Trạng thái</label>
-                        <select name="" id="">
-                            <option value="" selected>To do</option>
-                            <option value="">In Progress</option>
-                            <option value="">Done</option>
+                        <select name="" id="status">
+                            <option value="todo" selected>To do</option>
+                            <option value="inprogress">In Progress</option>
+                            <option value="done">Done</option>
                         </select>
                     </div>
                 </div>
                 <div class="form_task_content_action">
                     <button class="btn" type="button" onclick="closeDialogTask()">Hủy</button>
-                    <button class="btn">Thêm Task</button>
+                    <button class="btn" type="submit" id="form_task_submit">Thêm Task</button>
                 </div>
             </form>
         </dialog>
